Add Augury forecast resources

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -102,6 +102,9 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
+        VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
+        VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
+        VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
