--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -102,6 +102,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
+        EchoServiceToken: !Ref EchoServiceToken
         VpcPublicSubnet1Id: !Ref VpcPublicSubnet1Id
         VpcPublicSubnet2Id: !Ref VpcPublicSubnet2Id
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
