Clean up task definition CPU and memory values

--- a/stacks/provisioned/dovetail-router.yml
+++ b/stacks/provisioned/dovetail-router.yml
@@ -173,7 +173,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+          Cpu: !If [IsProduction, 700, 128]
           Environment:
             - Name: APP_NAME
               Value: dovetailrouter
@@ -193,7 +193,8 @@ Resources:
               awslogs-group: !Ref TaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 1000, 400]
+          MemoryReservation: !If [IsProduction, 600, 200]
           Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
