--- a/stacks/provisioned/grove.yml
+++ b/stacks/provisioned/grove.yml
@@ -176,7 +176,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 100, 64]
           Environment:
             - Name: APP_NAME
               Value: grove
@@ -196,7 +196,7 @@ Resources:
               awslogs-group: !Ref TaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 400, 200]
           Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
