--- a/stacks/provisioned/iframely.yml
+++ b/stacks/provisioned/iframely.yml
@@ -188,7 +188,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - serve
-          Cpu: 100 # TODO
+        - Cpu: 128
           Environment:
             - Name: APP_NAME
               Value: iframely
@@ -208,8 +208,8 @@ Resources:
               awslogs-group: !Ref TaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
-          Name: !Ref kContainerName
+          Memory: 1024
+          MemoryReservation: 512
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
               HostPort: 0
