--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -210,7 +210,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: networks
@@ -244,7 +244,8 @@ Resources:
               awslogs-group: !Ref PublicWebTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWebContainerName
           PortMappings:
             - ContainerPort: !Ref kWebApplicationPort
@@ -510,7 +511,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: networks
@@ -546,7 +547,8 @@ Resources:
               awslogs-group: !Ref SphinxServerTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kSphinxContainerName
           PortMappings:
             - ContainerPort: !Ref kWebApplicationPort
