--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -179,7 +179,7 @@ Resources:
     Type: AWS::ECS::TaskDefinition
     Properties:
       ContainerDefinitions:
-        - Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 100, 64]
           Environment:
             - Name: APP_NAME
               Value: "publish"
@@ -209,7 +209,7 @@ Resources:
               awslogs-group: !Ref TaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 400, 200]
           Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
