--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -193,7 +193,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: remix
@@ -213,7 +213,8 @@ Resources:
               awslogs-group: !Ref WebTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWebContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
@@ -241,7 +242,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - worker
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: remix
@@ -261,7 +262,8 @@ Resources:
               awslogs-group: !Ref WorkerTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWorkerContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
