--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -202,7 +202,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: cms
@@ -224,7 +224,8 @@ Resources:
               awslogs-group: !Ref WebTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWebContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
@@ -252,7 +253,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - worker
-          Cpu: 100 # TODO
+        - Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: cms
@@ -274,7 +275,8 @@ Resources:
               awslogs-group: !Ref WorkerTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWorkerContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
