Reduce instance counts for some services in staging

--- a/stacks/provisioned/play.yml
+++ b/stacks/provisioned/play.yml
@@ -106,7 +106,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: !If [IsProduction, 3, 1]
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
