--- a/stacks/provisioned/grove.yml
+++ b/stacks/provisioned/grove.yml
@@ -106,7 +106,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: !If [IsProduction, 2, 1]
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
