--- a/stacks/provisioned/iframely.yml
+++ b/stacks/provisioned/iframely.yml
@@ -118,7 +118,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: !If [IsProduction, 2, 1]
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
