--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -111,7 +111,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: !If [IsProduction, 2, 1]
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
