Fix task definition syntax errors

--- a/stacks/provisioned/exchange.yml
+++ b/stacks/provisioned/exchange.yml
@@ -233,7 +233,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-        - Cpu: !If [IsProduction, 200, 128]
+          Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: exchange
@@ -302,7 +302,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - worker
-        - Cpu: !If [IsProduction, 200, 128]
+          Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: exchange
