--- a/stacks/provisioned/iframely.yml
+++ b/stacks/provisioned/iframely.yml
@@ -188,7 +188,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - serve
-        - Cpu: 128
+          Cpu: 128
           Environment:
             - Name: APP_NAME
               Value: iframely
