--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -193,7 +193,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-        - Cpu: !If [IsProduction, 200, 128]
+          Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: remix
@@ -242,7 +242,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - worker
-        - Cpu: !If [IsProduction, 200, 128]
+          Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: remix
