--- a/stacks/provisioned/styleguide.yml
+++ b/stacks/provisioned/styleguide.yml
@@ -176,7 +176,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-        - Cpu: !If [IsProduction, 100, 64]
+          Cpu: !If [IsProduction, 100, 64]
           Environment:
             - Name: APP_NAME
               Value: styleguide
