Replace missing value

--- a/stacks/provisioned/iframely.yml
+++ b/stacks/provisioned/iframely.yml
@@ -210,6 +210,7 @@ Resources:
               awslogs-stream-prefix: ecs
           Memory: 1024
           MemoryReservation: 512
+          Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
               HostPort: 0
