Add tags to flow logs

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -215,6 +215,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
+        RootStackName: !Ref RootStackName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
