Update stack description

--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -2,7 +2,10 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the Augury web server, along with target group and
+  listener rule for the shared ALB. Also creates a worker service, queue,
+  Fargate task, and other resources needed for periodic forecast processing.
 
 Parameters:
   kWebContainerName:
