--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -188,7 +188,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2 # TODO
+      DesiredCount: 2
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWorkerContainerName
@@ -215,7 +215,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - web
-          Cpu: 100 # TODO
+          Cpu: !If [IsProduction, 2000, 128]
           Environment:
             - Name: APP_NAME
               Value: augury
@@ -235,7 +235,8 @@ Resources:
               awslogs-group: !Ref WebTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWebContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
@@ -263,7 +264,7 @@ Resources:
       ContainerDefinitions:
         - Command:
             - worker
-          Cpu: 100 # TODO
+          Cpu: !If [IsProduction, 2000, 128]
           Environment:
             - Name: APP_NAME
               Value: augury
@@ -283,7 +284,8 @@ Resources:
               awslogs-group: !Ref WorkerTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
-          Memory: 400 # TODO
+          Memory: !If [IsProduction, 2000, 1000]
+          MemoryReservation: !If [IsProduction, 1000, 500]
           Name: !Ref kWorkerContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
