Turn off destination type

--- a/stacks/shared-vpc/flow-logs.yml
+++ b/stacks/shared-vpc/flow-logs.yml
@@ -56,7 +56,7 @@ Resources:
     Condition: IsEnabled
     Properties:
       DeliverLogsPermissionArn: !GetAtt DeliverLogsRole.Arn
-      LogDestinationType: cloud-watch-logs
+      # LogDestinationType: cloud-watch-logs
       LogGroupName: !Ref FlowLogGroup
       ResourceId: !Ref VpcId
       ResourceType: VPC
