Add Exchange worker auto scaling

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -9,6 +9,7 @@ Parameters:
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
+  EcsClusterName: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
@@ -219,6 +220,7 @@ Resources:
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
+        EcsClusterName: !Ref EcsClusterName
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref ExchangeEcrImageTag
