--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -984,6 +984,7 @@ Resources:
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
+        EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
         VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
