--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -29,6 +29,40 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
+  # INGRESS 140
+  # Allows inbound traffic on high-numbered ports from all IPs. This generally
+  # is for return HTTP(S) traffic from requests made from hosts within the VPC.
+  # Some of the ports in this range may be denied by other rules.
+  # This assumes that the HTTP requests are originating from Linux host, and
+  # use the common ephemeral port range for that operating system.
+  # These are also the dynamic ports used with ECS port mapping, allowing
+  # traffic between the load balancer and ECS instances.
+  # https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#nacl-ephemeral-ports
+  InboudIpV4TcpEphemeralPortsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 32768
+        To: 61000
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 140
+  InboudIpV6TcpEphemeralPortsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 32768
+        To: 61000
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 141
+
   # INGRESS 520
   # Allows inbound Redis traffic from all IPs within the VPC
   InboundIpV4RedisNetworkAclEntry:
